--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,19 @@
 [tool.poetry]
 name = "uvicorn-worker"
 version = "0.0.1"
-description = ""
+description = "Implementation of Uvicorn Worker for Gunicorn! 🚀"
 authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.8"
 gunicorn = ">=20.1.0"
 uvicorn = ">=0.12.0"
+asgi-logger = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+black = "^22.3.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
