--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,58 @@
-[tool.poetry]
+[project]
 name = "uvicorn-worker"
-version = "0.0.1"
-description = "Implementation of Uvicorn Worker for Gunicorn! 🚀"
-authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
+description = "Uvicorn worker for Gunicorn! ✨"
+readme = "README.md"
+authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: MIT License",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+license = "MIT"
+requires-python = ">=3.8"
+dependencies = ["uvicorn>=0.14.0", "gunicorn>=20.1.0"]
+optional-dependencies = {}
+dynamic = ["version"]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-gunicorn = ">=20.1.0"
-uvicorn = ">=0.12.0"
-asgi-logger = "^0.1.0"
+[tool.hatch.version]
+path = "uvicorn_worker/__init__.py"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-black = "^22.3.0"
-flake8 = "^4.0.1"
+[tool.hatch.envs.dev]
+dependencies = ["black", "mypy", "ruff", "pre-commit", "bpython"]
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.hatch.envs.test]
+dependencies = [
+    "coverage[toml]",
+    "pytest",
+    "pytest-sugar",
+    "dirty-equals",
+    "httpx",
+]
+
+[[tool.hatch.envs.test.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11"]
+
+[tool.mypy]
+strict = true
+
+[tool.black]
+target-version = ["py38"]
+
+[tool.pytest.ini_options]
+addopts = ["--strict-config", "--strict-markers"]
+filterwarnings = ["error"]
+
+[tool.coverage.run]
+source_pkgs = ["uvicorn_worker", "tests"]
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
