--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,26 +29,31 @@ dynamic = ["version"]
 [tool.hatch.version]
 path = "uvicorn_worker/__init__.py"
 
-[tool.hatch.envs.dev]
-dependencies = ["black", "mypy", "ruff", "pre-commit", "bpython"]
-
-[tool.hatch.envs.test]
-dependencies = [
-    "coverage[toml]",
-    "pytest",
-    "pytest-sugar",
-    "dirty-equals",
-    "httpx",
-]
-
 [[tool.hatch.envs.test.matrix]]
 python = ["3.8", "3.9", "3.10", "3.11"]
 
 [tool.mypy]
-strict = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+show_error_codes = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+follow_imports = "silent"
 
-[tool.black]
-target-version = ["py38"]
+[[tool.mypy.overrides]]
+module = "tests.*"
+disallow_untyped_defs = false
+check_untyped_defs = true
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "FA", "UP"]
+ignore = ["B904", "B028"]
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
 
 [tool.pytest.ini_options]
 addopts = ["--strict-config", "--strict-markers"]
@@ -60,3 +65,4 @@ source_pkgs = ["uvicorn_worker", "tests"]
 [tool.coverage.report]
 show_missing = true
 skip_covered = true
+fail_under = 100
