--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,9 @@ twine==4.0.2
 ruff==0.3.4
 mypy==1.9.0
 pytest==8.0.0
+pytest-xdist==1.3.0
 coverage==7.4.1
+coverage_enable_subprocess==1.0
 httpx==0.27.0
+trustme==1.1.0
+cryptography==42.0.4
