--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,18 +10,23 @@ on:
 
 jobs:
   tests:
-    name: "Python ${{ matrix.python-version }}"
+    name: "Py ${{ matrix.python-version }} / Uvicorn ${{ matrix.uvicorn-version }} / Gunicorn ${{ matrix.gunicorn-version }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        uvicorn-version: ["0.14.0", ""]
+        gunicorn-version: ["20.1.0", ""]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: "${{ matrix.python-version }}"
       - name: Install dependencies
-        run: scripts/install
+        run: |
+          pip install "${{ format('uvicorn{0}{1}', matrix.uvicorn-version != '' && '==' || '', matrix.uvicorn-version) }}"
+          pip install "${{ format('gunicorn{0}{1}', matrix.gunicorn-version != '' && '==' || '', matrix.gunicorn-version) }}"
+          scripts/install
       - name: Run linting checks
         run: scripts/check
       - name: Build package
