--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,74 @@
-[tool.poetry]
-name = "uvicorn-worker"
-version = "0.0.1"
-description = "Implementation of Uvicorn Worker for Gunicorn! 🚀"
-authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.8"
-gunicorn = ">=20.1.0"
-uvicorn = ">=0.12.0"
-asgi-logger = "^0.1.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-black = "^22.3.0"
-flake8 = "^4.0.1"
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "uvicorn-worker"
+description = "Uvicorn worker for Gunicorn! ✨"
+readme = "README.md"
+authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: MIT License",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
+license = "BSD-3-Clause"
+requires-python = ">=3.8"
+dependencies = ["uvicorn>=0.14.0", "gunicorn>=20.1.0"]
+optional-dependencies = {}
+dynamic = ["version"]
+
+[tool.hatch.version]
+path = "uvicorn_worker/__init__.py"
+
+[tool.mypy]
+warn_unused_ignores = true
+warn_redundant_casts = true
+show_error_codes = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+follow_imports = "silent"
+
+[[tool.mypy.overrides]]
+module = "tests.*"
+disallow_untyped_defs = false
+check_untyped_defs = true
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "FA", "UP"]
+ignore = ["B904", "B028"]
+
+[tool.ruff.lint.isort]
+combine-as-imports = true
+
+[tool.pytest.ini_options]
+addopts = ["--strict-config", "--strict-markers"]
+filterwarnings = ["error", "ignore::DeprecationWarning"]
+
+[tool.coverage.run]
+source = ["uvicorn_worker", "tests"]
+parallel = true
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
+fail_under = 100
+exclude_lines = [
+    "pragma: no cover",
+    "pragma: nocover",
+    "if TYPE_CHECKING:",
+    "if typing.TYPE_CHECKING:",
+    "raise NotImplementedError",
+]
