--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,32 @@ jobs:
         timeout-minutes: 10
       - name: Enforce coverage
         run: scripts/coverage
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: [tests]
+
+    permissions:
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install dependencies
+        run: scripts/install
+
+      - name: check version
+        uses: samuelcolvin/check-python-version@v4.1
+        with:
+          version_file_path: uvicorn_worker/__init__.py
+
+      - name: Build package
+        run: scripts/build
+
+      - name: Upload package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
