--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "*"
   pull_request:
     branches:
       - main
@@ -14,6 +16,7 @@ jobs:
       Py ${{ matrix.python-version }} /
       Uvicorn${{matrix.uvicorn-version == '' && ' (latest)' || format(' {0}', matrix.uvicorn-version) }} /
       Gunicorn${{matrix.gunicorn-version == '' && ' (latest)' || format(' {0}', matrix.gunicorn-version) }}
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
