Add project.urls PyPI metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,12 @@ dependencies = ["uvicorn>=0.14.0", "gunicorn>=20.1.0"]
 optional-dependencies = {}
 dynamic = ["version"]
 
+[project.urls]
+# Homepage = "https://www.uvicorn-worker.marcelotryle.com"
+Changelog = "https://github.com/Kludex/uvicorn-worker/releases"
+Funding = "https://github.com/sponsors/Kludex"
+Source = "https://github.com/Kludex/uvicorn-worker"
+
 [tool.hatch.version]
 path = "uvicorn_worker/__init__.py"
 
